# cs202GroupProject

./: .gitignore  .gitmodules
Hunt The Wendigo/: CMakeLists.txt  Game.cpp  Game.hpp  HTW_main_file.cpp  Hunt The Wendigo.sln  Hunt The Wendigo.vcxproj  Hunt The Wendigo.vcxproj.filters  Player.cpp  Player.hpp  Room.cpp  Room.hpp  Wendigo.hpp
Hunt The Wendigo/assets/: dirt.aseprite  snow.aseprite
Hunt The Wendigo/lib/: tilemap.cpp  tilemap.hpp
